--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
         </activity>
 
         <activity
@@ -83,6 +83,14 @@
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
 
         </activity>
+
+
+        <activity
+            android:name=".activities.SettingsProfileActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
